# SPE_MiniProj

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  TODO  calculator.cpp  calculator.h  calculator_app  main.cpp  test.txt
ansible/: deploy.yml
include/: calculator.h
jenkins/email-templates/: README.md  failure.html  success.html  unstable.html
src/: calculator.cpp  main.cpp
tests/: CMakeLists.txt  test_calculator.cpp  test_harness.cpp
